Updated layout and front page design

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <title>AndradeBorg Recipes</title>
   </head>
-  <body>
+  <body class="bg-lightGrey text-darkSlateGrey min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
