--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <title>AndradeBorg Recipes</title>
   </head>
-  <body class="bg-lightGrey text-darkSlateGrey min-h-screen">
+  <body class="bg-brown-100 text-brown-600 min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
