Update Firebase configuration and dependencies

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script defer src="/__/firebase/10.11.0/firebase-app-compat.js"></script>
+    <script
+      defer
+      src="/__/firebase/10.11.0/firebase-firestore-compat.js"
+    ></script>
+    <!-- 
+      initialize the SDK after all desired features are loaded, set useEmulator to false
+      to avoid connecting the SDK to running emulators.
+    -->
+    <script defer src="/__/firebase/init.js?useEmulator=false"></script>
+
     <title>AndradeBorg Recipes</title>
   </head>
   <body class="bg-brown-100 text-brown-600 min-h-screen">
