--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Nunito+Sans:opsz@6..12&family=Poppins:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/10.11.0/firebase-auth-compat.js"></script>
     <script
